Tue Jan 13 16:19:29 2004  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* netsvcs/clients/Naming/Client/Client.mpc:

	  Fixed a dependancy issue.

Tue Jan 13 11:28:21 2004  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* Makefile (CONTROLLED_FILES):

	  Added `configure.ac' file to the list of controlled files.

	* configure.ac:

	  Corrected problem where std::auto_ptr<>::reset() method was not
	  detected properly in the !ACE_USES_STD_NAMESPACE_FOR_STDCPP_LIB
	  case.

	* bin/make_release:

	  Bootstrap autotool support prior to creating the kits via the
	  new bootstrap_autotools() subroutine described below.

	  Appended Emacs "Local Variables" block containing Perl mode to
	  end of this file to force Perl mode instead Fundamental mode to
	  be used by default when editing with Emacs.

	  (create_kit):

	  Moved autotool bootstrapping call to new bootstrap_autotools()
	  subroutine.

	  (bootstrap_autotools):

	  New subroutine that bootstraps autotool support into the ACE
	  distribution.

Tue Jan 13 18:06:23 UTC 2004  Don Hinton  <dhinton@dre.vanderbilt.edu>

        * include/makeinclude/rules.local.GNU:
          Only assign LIB_INSTALL to INSTALL if INSTALL has not yet been
          defined.  This will allow users to continue turning off
          installation of libraries by setting INSTALL= prior to including
          rules.local.GNU.  Thanks to Craig Rodrigues <crodrigu@bbn.com>
          for pointing this out.  Normally, the INS* variables can be used
          for this purpose, since they work for each target type.

Mon Jan 12 23:26:28 UTC 2004  Don Hinton  <dhinton@dre.vanderbilt.edu>

        * include/makeinclude/wrapper_macros.GNU:
          Added new commandline flag, static_link.  It defaults to 0, but
          can be set =1 to force static linking, e.g., uses "-static" when
          linking with GNU ld.  It's turned off by default since using it
          causes the footprint to go up by almost 1 MB, due to linking all